--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body, html {
   font-family: 'Poppins', sans-serif;
   background-color: #F1F3F4;
+  background-image: url("/public/bg.webp");
 }
 
 /* Estilo general del scrollbar */
